refactor : 입력으로 받은 자동차 이름을 split하는 로직을 InputView에 위임